# CalibChessboardGenerator

./: .gitignore  CMakeLists.txt  chess_generator.cpp  readme.md
